--- a/middleware/xatmi/makefile.cmk
+++ b/middleware/xatmi/makefile.cmk
@@ -21,9 +21,11 @@ lib_xatmi = LinkLibrary( 'bin/casual-xatmi',
 	[
 		Compile( 'source/xatmi.cpp'),
 		Compile( 'source/xatmi/server.cpp'),
+        Compile( 'source/xatmi/executable.cpp'),
 		Compile( 'source/xatmi/conversation.cpp'),
 		Compile( 'source/xatmi/call.cpp'),
 		Compile( 'source/xatmi/internal/code.cpp'),
+        Compile( 'source/xatmi/internal/log.cpp'),
 		Compile( 'source/xa.cpp'),
 		Compile( 'source/tx.cpp'),
 	],
