--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -4,22 +4,24 @@ server:
 
   default:
     service:
+
       # transation characteristics
       # Can be one of the following
       # - auto : if a transaction is present join it, else start a new one (default)
       # - join : if a transaction is present join it,
       # - none : don't join any transaction
       # - atomic : start a new transaction regardless.
-      #
       transaction: join
 
-      #
       # arbitary category string, to help group services in a domain specific meaning 
-      #
       category: example
-  #
+
+  # we can link a resource 
+  #resources:
+  #  - key: rm-mockup
+  #    name: mockup
+
   # A list of services that a server has
-  #
   services:
 
       # name of the service
