--- a/middleware/tools/makefile.cmk
+++ b/middleware/tools/makefile.cmk
@@ -25,14 +25,25 @@ install_lib = []
 common_a = LinkArchive( 'bin/casual-tools-common',
   [
     Compile( 'source/common.cpp'),
-    Compile( 'source/service/describe/invoke.cpp')
+    Compile( 'source/service/describe/invoke.cpp'),
    ])
 
-
+build_task_a = LinkArchive( 'bin/casual-tools-build-task',
+  [
+    Compile( 'source/build/task.cpp'),
+    Compile( 'source/build/generate.cpp'),
+    Compile( 'source/build/resource.cpp'),
+   ])
 
 target = LinkExecutable( 'bin/casual-build-server',
-   [ Compile( 'build/server.cpp')],
-   [ 'casual-common', 'casual-serviceframework', 'casual-configuration'])
+   [ Compile( 'source/build/server/main.cpp')],
+   [ common_a, build_task_a, 'casual-common', 'casual-serviceframework', 'casual-configuration'])
+
+install_bin.append( target)
+
+target = LinkExecutable( 'bin/casual-build-executable',
+   [ Compile( 'source/build/executable/main.cpp')],
+   [ common_a, build_task_a, 'casual-common', 'casual-serviceframework', 'casual-configuration'])
 
 install_bin.append( target)
 
