make sure we don't use resource property config if no resources are linked

--- a/middleware/tools/makefile.cmk
+++ b/middleware/tools/makefile.cmk
@@ -48,7 +48,7 @@ target = LinkExecutable( 'bin/casual-build-executable',
 install_bin.append( target)
 
 target = LinkExecutable( 'bin/casual-build-resource-proxy',
-   [ Compile( 'build/resource/proxy.cpp')],
+   [ Compile( 'source/build/resource/proxy/main.cpp')],
    [ 
     common_a,
     'casual-common', 
