--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -141,6 +141,7 @@ casual_common_objectfiles = [
     Compile( 'source/network/byteorder.cpp'),
     Compile( 'source/transcode.cpp'),
     Compile( 'source/timeout.cpp'),
+    Compile( 'source/metric.cpp'),
     
     Compile( 'source/argument.cpp'),
     Compile( 'source/argument/cardinality.cpp'),
