fix compound assign for configuration::transaction

--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -65,6 +65,7 @@ LinkUnittest( 'bin/test-casual-configuration',
         Compile( 'unittest/source/test_gateway.cpp'),
         Compile( 'unittest/source/test_message.cpp'),
         Compile( 'unittest/source/test_environment.cpp'),
+        Compile( 'unittest/source/test_transaction.cpp'),
         
         Compile( 'unittest/source/resource/test_property.cpp'),
         Compile( 'unittest/source/build/test_server.cpp'),
