--- a/middleware/configuration/example/domain/domain.ini
+++ b/middleware/configuration/example/domain/domain.ini
@@ -18,10 +18,15 @@ value=some value
 
 [domain.default.executable]
 instances=1
+restart=false
+
+[domain.default.executable.environment]
 
 [domain.default.server]
 instances=1
 restart=true
+
+[domain.default.server.environment]
 
 [domain.default.service]
 timeout=90s
@@ -55,9 +60,12 @@ restart=false
 [domain.gateway.default]
 
 [domain.gateway.default.connection]
+address=
 restart=true
 
 [domain.gateway.default.listener]
+
+[domain.gateway.default.listener.limit]
 
 [domain.gateway.listeners]
 address=localhost:7779
