--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -28,7 +28,7 @@ lib_configuration = LinkLibrary( 'bin/casual-configuration',
         Compile( 'source/domain.cpp'),
         Compile( 'source/queue.cpp'),
         Compile( 'source/gateway.cpp'),
-        Compile( 'source/server.cpp'),
+        Compile( 'source/executable.cpp'),
         Compile( 'source/service.cpp'),
         Compile( 'source/group.cpp'),
         Compile( 'source/transaction.cpp'),
