--- a/middleware/configuration/example/domain/default/domain.ini
+++ b/middleware/configuration/example/domain/default/domain.ini
@@ -8,9 +8,15 @@ name=
 
 [domain.default.executable]
 instances=1
+restart=false
+
+[domain.default.executable.environment]
 
 [domain.default.server]
 instances=1
+restart=false
+
+[domain.default.server.environment]
 
 [domain.default.service]
 timeout=0s
@@ -20,9 +26,12 @@ timeout=0s
 [domain.gateway.default]
 
 [domain.gateway.default.connection]
+address=
 restart=true
 
 [domain.gateway.default.listener]
+
+[domain.gateway.default.listener.limit]
 
 [domain.queue]
 
@@ -39,3 +48,4 @@ log=${CASUAL_DOMAIN_HOME}/transaction/log.db
 
 [domain.transaction.default.resource]
 instances=1
+key=
