--- a/middleware/configuration/example/domain/domain.yaml
+++ b/middleware/configuration/example/domain/domain.yaml
@@ -19,9 +19,32 @@ domain:
     server:
       instances: 1
       restart: true
+      memberships:
+        []
+
+      environment:
+        files:
+          []
+
+        variables:
+          []
+
+
 
     executable:
       instances: 1
+      restart: false
+      memberships:
+        []
+
+      environment:
+        files:
+          []
+
+        variables:
+          []
+
+
 
     service:
       timeout: 90s
@@ -36,8 +59,8 @@ domain:
 
     log: /some/fast/disk/domain.A42/transaction.log
     resources:
-      - instances: 5
-        name: customer-db
+      - name: customer-db
+        instances: 5
         note: this resource is named 'customer-db' - using the default rm-key (db_rm) - overrides the default rm-instances to 5
         openinfo: db=customer,uid=db2,pwd=db2
 
@@ -45,8 +68,8 @@ domain:
         note: this resource is named 'sales-db' - using the default rm-key (db_rm) - using default rm-instances
         openinfo: db=sales,uid=db2,pwd=db2
 
-      - key: mq_rm
-        name: event-queue
+      - name: event-queue
+        key: mq_rm
         note: this resource is named 'event-queue' - overrides rm-key - using default rm-instances
         openinfo: some-mq-specific-stuff
         closeinfo: some-mq-specific-stuff
@@ -90,11 +113,11 @@ domain:
 
     - path: sales-server
       alias: sales-pre
+      note: the only services that will be advertised are 'preSalesSaveService' and 'preSalesGetService'
       instances: 10
       memberships:
         - sales-group
 
-      note: the only services that will be advertised are 'preSalesSaveService' and 'preSalesGetService'
       restrictions:
         - preSalesSaveService
         - preSalesGetService
@@ -102,10 +125,10 @@ domain:
 
     - path: sales-server
       alias: sales-post
+      note: the only services that will be advertised are 'postSalesSaveService' and 'postSalesGetService'
       memberships:
         - sales-group
 
-      note: the only services that will be advertised are 'postSalesSaveService' and 'postSalesGetService'
       restrictions:
         - postSalesSaveService
         - postSalesGetService
@@ -142,44 +165,47 @@ domain:
 
 
   services:
-    - timeout: 2h
-      name: postSalesSaveService
+    - name: postSalesSaveService
+      timeout: 2h
       routes:
         - postSalesSaveService
         - sales/post/save
 
 
-    - timeout: 130ms
-      name: postSalesGetService
+    - name: postSalesGetService
+      timeout: 130ms
 
 
   gateway:
     default:
       listener:
-        {}
+        limit:
+          {}
+
 
       connection:
         restart: true
+        address: ""
 
 
     listeners:
-      - limit:
+      - address: localhost:7779
+        limit:
           size: 2097152
 
-        address: localhost:7779
         note: local host - if threshold of 2MB of total payload 'in flight' is reach inbound will stop consume from socket until we're below
 
-      - limit:
+      - address: some.host.org:7779
+        limit:
           messages: 200
 
-        address: some.host.org:7779
         note: listener that is bound to some 'external ip' - limit to max 200 calls 'in flight'
 
-      - limit:
+      - address: some.host.org:9999
+        limit:
           size: 10485760
           messages: 10
 
-        address: some.host.org:9999
         note: listener - threshold of either 10 messages OR 10MB - the first that is reach, inbound will stop consume
 
       - address: some.host.org:4242
@@ -188,7 +214,6 @@ domain:
 
     connections:
       - address: a45.domain.host.org:7779
-        note: connection to domain 'a45' - we expect to find service 's1' and 's2' there.
         services:
           - s1
           - s2
@@ -196,9 +221,9 @@ domain:
         queues:
           []
 
+        note: connection to domain 'a45' - we expect to find service 's1' and 's2' there.
 
       - address: a46.domain.host.org:7779
-        note: connection to domain 'a46' - we expect to find queues 'q1' and 'q2' and service 's1' - casual will only route 's1' to a46 if it's not accessible in a45 (or local)
         services:
           - s1
 
@@ -206,16 +231,17 @@ domain:
           - q1
           - q2
 
+        note: connection to domain 'a46' - we expect to find queues 'q1' and 'q2' and service 's1' - casual will only route 's1' to a46 if it's not accessible in a45 (or local)
 
-      - restart: false
-        address: a99.domain.host.org:7780
-        note: connection to domain 'a99' - if the connection is closed from a99, casual will not try to reestablish the connection
+      - address: a99.domain.host.org:7780
         services:
           []
 
         queues:
           []
 
+        restart: false
+        note: connection to domain 'a99' - if the connection is closed from a99, casual will not try to reestablish the connection
 
 
 
@@ -233,8 +259,8 @@ domain:
           - name: q_A1
             note: ""
 
-          - retries: 10
-            name: q_A2
+          - name: q_A2
+            retries: 10
             note: after 10 rollbacked dequeues, message is moved to q_A2.error
 
           - name: q_A3
@@ -252,8 +278,8 @@ domain:
           - name: q_B1
             note: ""
 
-          - retries: 10
-            name: q_B2
+          - name: q_B2
+            retries: 10
             note: after 10 rollbacked dequeues, message is moved to q_B2.error
 
 
