--- a/middleware/transaction/makefile.cmk
+++ b/middleware/transaction/makefile.cmk
@@ -30,44 +30,45 @@ install_headers = []
 #
 
 manager_archive = LinkArchive( 'bin/manager-archive',
-     [
-    Compile( 'source/manager/manager.cpp'),
-    Compile( 'source/manager/state.cpp'),
-    Compile( 'source/manager/action.cpp'),
-    Compile( 'source/manager/log.cpp'),
-    Compile( 'source/manager/handle.cpp'),
-    Compile( 'source/manager/admin/server.cpp'),
-    Compile( 'source/manager/admin/transform.cpp'),
-    Compile( 'source/common.cpp'),
+    [
+        Compile( 'source/common.cpp'),
+        Compile( 'source/global.cpp'),
+        Compile( 'source/manager/manager.cpp'),
+        Compile( 'source/manager/state.cpp'),
+        Compile( 'source/manager/action.cpp'),
+        Compile( 'source/manager/log.cpp'),
+        Compile( 'source/manager/handle.cpp'),
+        Compile( 'source/manager/admin/server.cpp'),
+        Compile( 'source/manager/admin/transform.cpp'),
     ])
  
 
 
 target = LinkExecutable( 'bin/casual-transaction-manager',
     [
-     Compile( 'source/manager/main.cpp')
+        Compile( 'source/manager/main.cpp')
     ],
     [ 
-      manager_archive, 
-     'casual-serviceframework', 
-     'casual-common', 
-     'casual-configuration', 
-     'sqlite3',
-     'casual-xatmi',
-     ])
+        manager_archive, 
+        'casual-serviceframework', 
+        'casual-common', 
+        'casual-configuration', 
+        'sqlite3',
+        'casual-xatmi',
+    ])
 
 install_bin.append( target)
 
 
 target = LinkLibrary( 'bin/casual-transaction-admin-cli',
     [
-     Compile( 'source/manager/admin/cli.cpp')
+        Compile( 'source/manager/admin/cli.cpp')
     ],
     [ 
-      manager_archive, 
-     'casual-serviceframework', 
-     'casual-common',
-     ])
+        manager_archive, 
+        'casual-serviceframework', 
+        'casual-common',
+    ])
 
 
 install_lib.append( target)
@@ -78,8 +79,8 @@ install_lib.append( target)
 
 target = LinkLibrary( 'bin/casual-resource-proxy-server',
    [
-    Compile( 'source/resource/proxy_server.cpp'),
-    Compile( 'source/resource/proxy.cpp'),
+        Compile( 'source/resource/proxy_server.cpp'),
+        Compile( 'source/resource/proxy.cpp'),
    ],
    [ manager_archive, 'casual-common', 'casual-serviceframework'])
 
@@ -105,24 +106,25 @@ install_bin.append( target)
  
 LinkUnittest( 'bin/test-casual-transaction',
     [
+        Compile( 'unittest/source/manager/test_state.cpp'),
+        Compile( 'unittest/source/manager/test_log.cpp'),
         Compile( 'unittest/source/test_admin.cpp'),
         Compile( 'unittest/source/test_configuration.cpp'),
-        Compile( 'unittest/source/test_log.cpp'),
         Compile( 'unittest/source/test_manager.cpp'),
         
     ],
     [ 
-     manager_archive, 
-     'casual-common', 
-     'casual-serviceframework', 
-     'casual-configuration', 
-     'sqlite3', 
-     'casual-mockup',
-     'casual-mockup-rm',
-     'casual-xatmi',
-     'casual-mockup-unittest-environment',
-     'casual-unittest',
-     ])
+        manager_archive, 
+        'casual-common', 
+        'casual-serviceframework', 
+        'casual-configuration', 
+        'sqlite3', 
+        'casual-mockup',
+        'casual-mockup-rm',
+        'casual-xatmi',
+        'casual-mockup-unittest-environment',
+        'casual-unittest',
+    ])
 
 
 Install( install_bin,'$(CASUAL_HOME)/bin')
