added a 'retry-send-message' that offload that responsibillity from managers
Need to change name, and possible make it a part of `domain` since it's such
a central thing...

--- a/middleware/makefile.cmk
+++ b/middleware/makefile.cmk
@@ -8,6 +8,7 @@ Build( 'serviceframework/makefile.cmk')
 Build( 'buffer/makefile.cmk')
 Build( 'configuration/makefile.cmk')
 Build( 'tools/makefile.cmk')
+Build( 'retry/makefile.cmk')
 
 with Scope():
     Parallel( True)
