--- a/middleware/service/makefile.cmk
+++ b/middleware/service/makefile.cmk
@@ -1,11 +1,12 @@
 from casual.middleware.make.dsl import *
 
 IncludePaths( [
-    'include',
-    'admin/include',
+   'include',
+   'admin/include',
 	'../common/include',
 	'../configuration/include',
-    '../domain/include',
+   '../domain/include',
+   '../retry/include',
 	'../xatmi/include',
 	'../serviceframework/include',
 	'$(CASUAL_OPTIONAL_INCLUDE_PATHS)'])
@@ -15,6 +16,7 @@ LibraryPaths( [
     '../common/bin',
     '../serviceframework/bin',
 	'../xatmi/bin',
+   '../retry/bin',
 	'../buffer/bin',
 	'../configuration/bin',
 	'$(CASUAL_OPTIONAL_LIBRARY_PATHS)'])
@@ -47,6 +49,7 @@ target = LinkExecutable( 'bin/casual-service-manager',
 	[
      logic_archive,
      'casual-common',
+     'casual-retry-send',
      'casual-serviceframework',
      'casual-xatmi',
      'casual-configuration']
