--- a/middleware/test/makefile.cmk
+++ b/middleware/test/makefile.cmk
@@ -13,6 +13,7 @@ LibraryPaths( [ 'bin',
 	'../common/bin',
 	'../queue/bin',
 	'../buffer/bin',
+   '../retry/bin',
 	'../serviceframework/bin',
     '../configuration/bin',
 	'$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
