--- a/middleware/makefile.cmk
+++ b/middleware/makefile.cmk
@@ -8,7 +8,7 @@ Build( 'serviceframework/makefile.cmk')
 Build( 'buffer/makefile.cmk')
 Build( 'configuration/makefile.cmk')
 Build( 'tools/makefile.cmk')
-Build( 'retry/makefile.cmk')
+Build( 'eventually/makefile.cmk')
 
 with Scope():
     Parallel( True)
