--- a/middleware/service/makefile.cmk
+++ b/middleware/service/makefile.cmk
@@ -1,12 +1,12 @@
 from casual.middleware.make.dsl import *
 
 IncludePaths( [
-   'include',
-   'admin/include',
+    'include',
+    'admin/include',
 	'../common/include',
-	'../configuration/include',
-   '../domain/include',
-   '../retry/include',
+    '../configuration/include',
+    '../domain/include',
+    '../eventually/include',
 	'../xatmi/include',
 	'../serviceframework/include',
 	'$(CASUAL_OPTIONAL_INCLUDE_PATHS)'])
@@ -16,7 +16,7 @@ LibraryPaths( [
     '../common/bin',
     '../serviceframework/bin',
 	'../xatmi/bin',
-   '../retry/bin',
+    '../eventually/bin',
 	'../buffer/bin',
 	'../configuration/bin',
 	'$(CASUAL_OPTIONAL_LIBRARY_PATHS)'])
@@ -49,7 +49,7 @@ target = LinkExecutable( 'bin/casual-service-manager',
 	[
      logic_archive,
      'casual-common',
-     'casual-retry-send',
+     'casual-eventually-send',
      'casual-serviceframework',
      'casual-xatmi',
      'casual-configuration']
@@ -70,6 +70,7 @@ target = LinkExecutable( 'bin/casual-service-forward',
      ] + forward_objs,
     [
       logic_archive,
+      'casual-eventually-send',
       'casual-common'
      ])
 
@@ -103,6 +104,8 @@ LinkUnittest( 'unittest/bin/test-casual-service',
     ] + forward_objs,
     [
      logic_archive,
+     'casual-eventually-send',
+     'casual-eventually-unittest',
      'casual-common', 
      'casual-serviceframework',
      'casual-xatmi', 
