--- a/middleware/queue/makefile.cmk
+++ b/middleware/queue/makefile.cmk
@@ -8,23 +8,23 @@ IncludePaths( [
     '../serviceframework/include', 
     '../xatmi/include',
     '../transaction/include',
-    '../eventually/include',
+    '../domain/include',
     '../../thirdparty/database/include',
     '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
-    ])
+])
 
 
 LibraryPaths( [ 
-        'bin',
-        '../transaction/bin',
-        '../configuration/bin',
-        '../serviceframework/bin',
-        '../common/bin',
-        '../buffer/bin',
-        '../eventually/bin',
-        '../xatmi/bin',
-        '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
-    ])
+    'bin',
+    '../transaction/bin',
+    '../configuration/bin',
+    '../serviceframework/bin',
+    '../common/bin',
+    '../buffer/bin',
+    '../domain/bin',
+    '../xatmi/bin',
+    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
+])
     
 
 
@@ -68,7 +68,7 @@ queue_group = LinkExecutable( 'bin/casual-queue-group',
     [
      group_archive,
      common,
-     'casual-eventually-send',
+     'casual-domain-pending-send',
      'casual-common',
      'sqlite3',
      ])
@@ -174,8 +174,8 @@ test_casual_queue = LinkUnittest( 'unittest/bin/test-casual-queue',
      common,
      queue_api,
      'casual-mockup',
-     'casual-mockup-unittest-environment',
-     'casual-eventually-unittest',
+     #'casual-mockup-unittest-environment',
+     'casual-domain-unittest',
      'casual-common',
      'casual-serviceframework',
      'casual-configuration',
