fix build and unittest dependencies

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -22,6 +22,7 @@ LibraryPaths(
         '../gateway/bin',
         '../tools/bin',
         '../serviceframework/bin',
+        '../xatmi/bin',
         '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
     ])
 
