--- a/middleware/configuration/makefile.cmk
+++ b/middleware/configuration/makefile.cmk
@@ -13,6 +13,7 @@ LibraryPaths([
     'bin',
     '../common/bin',
     '../serviceframework/bin',
+    '../xatmi/bin',
     '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
     ])
 
