--- a/middleware/transaction/makefile.cmk
+++ b/middleware/transaction/makefile.cmk
@@ -53,7 +53,8 @@ manager = LinkExecutable( 'bin/casual-transaction-manager',
         manager_archive, 
         'casual-serviceframework', 
         'casual-common', 
-        'casual-configuration', 
+        'casual-configuration',
+        'casual-domain-pending-message',
         'sqlite3',
     ])
 
@@ -79,7 +80,7 @@ install_lib.append( target)
 
 target = LinkLibrary( 'bin/casual-resource-proxy-server',
    [
-        Compile( 'source/resource/proxy_server.cpp'),
+        Compile( 'source/resource/proxy/server.cpp'),
         Compile( 'source/resource/proxy.cpp'),
    ],
    [ manager_archive, 'casual-common', 'casual-serviceframework'])
@@ -116,6 +117,7 @@ test_transaction = LinkUnittest( 'bin/test-casual-transaction',
         'casual-common', 
         'casual-serviceframework', 
         'casual-configuration', 
+        'casual-domain-pending-message',
         'sqlite3',
         'casual-unittest',
         'casual-domain-unittest',
