bug - binary archive did not handle optional-like correct.
Had to change how to dispatch if the archive want named stuff or not,
and add a dynamic branch, since the actual archive-implementations are
type erased.

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -85,6 +85,7 @@ target = LinkLibrary( 'bin/casual-domain-admin-cli',
      manager_archive,
      common_archive,
      'casual-common',
+     'casual-configuration',
      'casual-serviceframework'
      ]
 )
