--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -139,7 +139,7 @@ casual_common_objectfiles = [
     Compile( 'source/serialize/yaml.cpp'),
     Compile( 'source/serialize/binary.cpp'),
     Compile( 'source/serialize/create.cpp'),
-    
+    Compile( 'source/serialize/archive/type.cpp'),
 ]
 
 
