dynamic configuration PUT-like
'PUT' part of configuration which update the runtime state

This only handles new 'aliass', that is, only adding servers or
executables and no mutation of current aliases.

Just to make sure if this is the right path forward, which I think. Need
to be evaluated by others though.

--- a/middleware/domain/makefile.cmk
+++ b/middleware/domain/makefile.cmk
@@ -38,6 +38,7 @@ manager_archive = LinkArchive( 'bin/casual-domain-manager',
     Compile( 'source/manager/task.cpp'),
     Compile( 'source/manager/task/create.cpp'),
     Compile( 'source/manager/state.cpp'),
+    Compile( 'source/manager/state/create.cpp'),
     Compile( 'source/manager/handle.cpp'),
     Compile( 'source/manager/admin/server.cpp'),
     Compile( 'source/manager/configuration.cpp'),
