--- a/middleware/event/makefile.cmk
+++ b/middleware/event/makefile.cmk
@@ -5,6 +5,7 @@ IncludePaths([
 	'../common/include',
 	'../serviceframework/include',
 	'../xatmi/include',
+   '../domain/include',
 	'../../thirdparty/database/include',
 	'$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
 	])
@@ -14,6 +15,7 @@ LibraryPaths([
 	'bin',
     '../common/bin',
     '../xatmi/bin',
+    '../domain/bin',
     '../serviceframework/bin',
     '../configuration/bin',
     '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
@@ -22,19 +24,28 @@ LibraryPaths([
 
 install_lib = []
 install_bin = []
+install_header = []
 
 common_archive = LinkArchive( 'bin/casual-event-common',
 	[
 		Compile( 'source/common.cpp')
-	] 
-	)
-
-archive_vo = LinkArchive( 'bin/casual-event-service-monitor-vo',
-    [
-		Compile( 'source/service/monitor/vo/entry.cpp')
 	])
 
-install_lib.append( archive_vo)
+lib_api = LinkLibrary( 'bin/casual-event-api',
+    [
+		Compile( 'source/dispatch.cpp')
+	],
+   [
+      common_archive,
+      'casual-common',
+   ])
+
+install_lib.append( lib_api)
+install_header += [
+   ( 'include/casual/event/model.h', 'casual/event'),
+   ( 'include/casual/event/dispatch.h', 'casual/event'),
+]
+
 
     
 target = LinkExecutable( 'bin/casual-event-service-monitor',
@@ -52,7 +63,9 @@ target = LinkExecutable( 'bin/casual-event-service-log',
 	    Compile( 'source/service/log/main.cpp')
 	],
 	[
-	'casual-common'] )
+      common_archive,
+	   'casual-common'
+   ] )
 
 install_bin.append( target)
 
@@ -61,7 +74,6 @@ target = LinkExecutable( 'bin/casual-event-service-monitor-server',
 	    Compile( 'source/service/monitor/server.cpp')
 	],
 	[
-		archive_vo,
 		common_archive,
 		'casual-common',
 		'casual-serviceframework',
@@ -70,22 +82,24 @@ target = LinkExecutable( 'bin/casual-event-service-monitor-server',
 
 install_bin.append( target)
 	
-		
-#
-# unittest
-#
-LinkUnittest( 'bin/test-casual-monitor',
-	[ Compile( 'unittest/source/test_monitor.cpp')],
-	[
-	archive_vo,
-	'casual-common',
-	'sqlite3'])	
 
-#
-# Install
-#
+LinkUnittest( 'bin/test-casual-event',
+	[ Compile( 'unittest/source/test_dispatch.cpp')],
+	[
+      lib_api,
+	   'casual-common',
+      'casual-unittest',
+      'casual-domain-api',
+      'casual-domain-pending-message',
+      'casual-domain-unittest',
+   ])	
+
+
 Install( install_lib,'$(CASUAL_HOME)/lib')
 Install( install_bin,'$(CASUAL_HOME)/bin')
+Install( install_header,'$(CASUAL_HOME)/include')
+
+
 
 
 
