feature: `casual-queue-manager` respect environment variables in configuration
Also:
made sure `casual-services-manager` respect environment variables in configuration

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -108,8 +108,10 @@ casual_common_objectfiles = [
     Compile( 'source/exception/tx.cpp'),
     Compile( 'source/exception/xatmi.cpp'),
 
-    Compile( 'source/uuid.cpp'),
     Compile( 'source/environment.cpp'),
+    Compile( 'source/environment/string.cpp'),
+
+    Compile( 'source/uuid.cpp'),
     Compile( 'source/file.cpp'),
     Compile( 'source/string.cpp'),
     Compile( 'source/signal.cpp'),
